# nsw-fuel-api-client

./: .gitignore  README.md  demo.py  pyproject.toml  pytest.ini  token
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml
nsw_fuel/: __init__.py  client.py  const.py  dto.py
scripts/: setup
src/nsw_fuel/: __init__.py  client.py  const.py
tests/: __init__.py  conftest.py  test_client.py  test_integration.py
